--- a/deploy/04-minikube-1m.yaml
+++ b/deploy/04-minikube-1m.yaml
@@ -6,9 +6,9 @@ metadata:
   namespace : rocketmq-operator
 spec:
   brokerImage: huanwei/rocketmq-broker-k8s:4.3.2
-  nameServers: 192.168.0.96:9876;192.168.0.97:9876
+  nameServers: 10.0.2.15:9876
   allMaster: true
   replicationMode: SYNC
-  groupReplica: 2
+  groupReplica: 1
   membersPerGroup: 1
-  storageClass: alicloud-disk-available
+  storageClass: standard
