--- a/deploy/00-namesrv.yaml
+++ b/deploy/00-namesrv.yaml
@@ -20,7 +20,7 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       containers:
       - name: namesrv
-        image: huanwei/rocketmq:4.3.2
+        image: rocketmqinc/rocketmq:4.3.2-k8s
         command: ["sh","mqnamesrv"]
         imagePullPolicy: Always
         ports:
