--- a/deploy/04-cluster-2m.yaml
+++ b/deploy/04-cluster-2m.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace : rocketmq-operator
 spec:
   brokerImage: rocketmqinc/rocketmq:4.3.2-k8s
-  nameServers: $NAME_SERVERS
+  nameServers: $NAMESRV_ADDR
   allMaster: true
   replicationMode: SYNC
   groupReplica: 2
