Add support for generic config properties

--- a/deploy/01-resources.yaml
+++ b/deploy/01-resources.yaml
@@ -13,3 +13,7 @@ spec:
     kind: BrokerCluster
     singular: brokercluster
     plural: brokerclusters
+    shortNames:
+    - bc
+    - rocket
+    - rkt
