--- a/deploy/04-cluster-2m-2s.yaml
+++ b/deploy/04-cluster-2m-2s.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: "rocketmq.huanwei.io/v1alpha1"
+apiVersion: "rocketmq.operator.io/v1alpha1"
 kind: BrokerCluster
 metadata:
   name: mybrokercluster
