--- a/deploy/03-deploymentWithConfig.yaml
+++ b/deploy/03-deploymentWithConfig.yaml
@@ -39,7 +39,7 @@ spec:
       containers:
       - name: rocketmq-operator-controller
         imagePullPolicy: IfNotPresent
-        image: rocketmqinc/rocketmq-operator:0.1.2-dev
+        image: rocketmqinc/rocketmq-operator:0.1.3-20190312164235
         ports:
         - containerPort: 10254
         volumeMounts:
