--- a/docker/rocketmq-broker-k8s/4.3.2/Dockerfile
+++ b/docker/rocketmq-broker-k8s/4.3.2/Dockerfile
@@ -1,4 +1,4 @@
-FROM huanwei/rocketmq:4.3.2
+FROM rocketmqinc/rocketmq:4.3.2
 
 COPY brokerGenConfig.sh brokerStart.sh ${ROCKETMQ_HOME}/bin/
 RUN chmod +x ${ROCKETMQ_HOME}/bin/brokerGenConfig.sh \
